build/ml/cp_parser_tools.output
   0  $accept : %entry% $end

   1  main : VERSION STRING EOI
   2       | LBRAK structs RBRAK EOI

   3  structs : struct1 EOI
   4          | struct1 EOI structs

   5  struct1 : LCURL struct_entries RCURL

   6  struct_entries : struct_entry EOI
   7                 | struct_entry EOI struct_entries

   8  struct_entry : SYN_TOOL EQ STRING
   9               | SYN_TOP EQ STRING
  10               | SYN_VER EQ VALUE
  11               | SYN_VHDL_MAP EQ LBRAK list2 RBRAK
  12               | SYN_VHDL_MAP EQ LBRAK RBRAK
  13               | SYN_VHDL_LIB EQ LBRAK list1 RBRAK
  14               | SYN_VHDL_LIB EQ LBRAK RBRAK
  15               | SYN_SYNTH_SET EQ LBRAK list21 RBRAK
  16               | SYN_SYNTH_SET EQ LBRAK RBRAK
  17               | SYN_TECH_SET EQ LBRAK list21 RBRAK
  18               | SYN_TECH_SET EQ LBRAK RBRAK

  19  list21 : str SEP LBRAK list2 RBRAK EOI
  20         | str SEP LBRAK list2 RBRAK EOI list21

  21  list2 : str SEP str EOI
  22        | str SEP str EOI list2

  23  list1 : str EOI
  24        | str EOI list1

  25  str : STRING
  26      | STRING ADD str

  27  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (27)

	VERSION  shift 3
	LBRAK  shift 4
	.  error

	main  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	main : VERSION . STRING EOI  (1)

	STRING  shift 6
	.  error


state 4
	main : LBRAK . structs RBRAK EOI  (2)

	LCURL  shift 7
	.  error

	structs  goto 8
	struct1  goto 9


state 5
	%entry% : '\001' main .  (27)

	.  reduce 27


state 6
	main : VERSION STRING . EOI  (1)

	EOI  shift 10
	.  error


state 7
	struct1 : LCURL . struct_entries RCURL  (5)

	SYN_TOOL  shift 11
	SYN_TOP  shift 12
	SYN_VER  shift 13
	SYN_VHDL_MAP  shift 14
	SYN_SYNTH_SET  shift 15
	SYN_TECH_SET  shift 16
	SYN_VHDL_LIB  shift 17
	.  error

	struct_entries  goto 18
	struct_entry  goto 19


state 8
	main : LBRAK structs . RBRAK EOI  (2)

	RBRAK  shift 20
	.  error


state 9
	structs : struct1 . EOI  (3)
	structs : struct1 . EOI structs  (4)

	EOI  shift 21
	.  error


state 10
	main : VERSION STRING EOI .  (1)

	.  reduce 1


state 11
	struct_entry : SYN_TOOL . EQ STRING  (8)

	EQ  shift 22
	.  error


state 12
	struct_entry : SYN_TOP . EQ STRING  (9)

	EQ  shift 23
	.  error


state 13
	struct_entry : SYN_VER . EQ VALUE  (10)

	EQ  shift 24
	.  error


state 14
	struct_entry : SYN_VHDL_MAP . EQ LBRAK list2 RBRAK  (11)
	struct_entry : SYN_VHDL_MAP . EQ LBRAK RBRAK  (12)

	EQ  shift 25
	.  error


state 15
	struct_entry : SYN_SYNTH_SET . EQ LBRAK list21 RBRAK  (15)
	struct_entry : SYN_SYNTH_SET . EQ LBRAK RBRAK  (16)

	EQ  shift 26
	.  error


state 16
	struct_entry : SYN_TECH_SET . EQ LBRAK list21 RBRAK  (17)
	struct_entry : SYN_TECH_SET . EQ LBRAK RBRAK  (18)

	EQ  shift 27
	.  error


state 17
	struct_entry : SYN_VHDL_LIB . EQ LBRAK list1 RBRAK  (13)
	struct_entry : SYN_VHDL_LIB . EQ LBRAK RBRAK  (14)

	EQ  shift 28
	.  error


state 18
	struct1 : LCURL struct_entries . RCURL  (5)

	RCURL  shift 29
	.  error


state 19
	struct_entries : struct_entry . EOI  (6)
	struct_entries : struct_entry . EOI struct_entries  (7)

	EOI  shift 30
	.  error


state 20
	main : LBRAK structs RBRAK . EOI  (2)

	EOI  shift 31
	.  error


state 21
	structs : struct1 EOI .  (3)
	structs : struct1 EOI . structs  (4)

	LCURL  shift 7
	RBRAK  reduce 3

	structs  goto 32
	struct1  goto 9


state 22
	struct_entry : SYN_TOOL EQ . STRING  (8)

	STRING  shift 33
	.  error


state 23
	struct_entry : SYN_TOP EQ . STRING  (9)

	STRING  shift 34
	.  error


state 24
	struct_entry : SYN_VER EQ . VALUE  (10)

	VALUE  shift 35
	.  error


state 25
	struct_entry : SYN_VHDL_MAP EQ . LBRAK list2 RBRAK  (11)
	struct_entry : SYN_VHDL_MAP EQ . LBRAK RBRAK  (12)

	LBRAK  shift 36
	.  error


state 26
	struct_entry : SYN_SYNTH_SET EQ . LBRAK list21 RBRAK  (15)
	struct_entry : SYN_SYNTH_SET EQ . LBRAK RBRAK  (16)

	LBRAK  shift 37
	.  error


state 27
	struct_entry : SYN_TECH_SET EQ . LBRAK list21 RBRAK  (17)
	struct_entry : SYN_TECH_SET EQ . LBRAK RBRAK  (18)

	LBRAK  shift 38
	.  error


state 28
	struct_entry : SYN_VHDL_LIB EQ . LBRAK list1 RBRAK  (13)
	struct_entry : SYN_VHDL_LIB EQ . LBRAK RBRAK  (14)

	LBRAK  shift 39
	.  error


state 29
	struct1 : LCURL struct_entries RCURL .  (5)

	.  reduce 5


state 30
	struct_entries : struct_entry EOI .  (6)
	struct_entries : struct_entry EOI . struct_entries  (7)

	SYN_TOOL  shift 11
	SYN_TOP  shift 12
	SYN_VER  shift 13
	SYN_VHDL_MAP  shift 14
	SYN_SYNTH_SET  shift 15
	SYN_TECH_SET  shift 16
	SYN_VHDL_LIB  shift 17
	RCURL  reduce 6

	struct_entries  goto 40
	struct_entry  goto 19


state 31
	main : LBRAK structs RBRAK EOI .  (2)

	.  reduce 2


state 32
	structs : struct1 EOI structs .  (4)

	.  reduce 4


state 33
	struct_entry : SYN_TOOL EQ STRING .  (8)

	.  reduce 8


state 34
	struct_entry : SYN_TOP EQ STRING .  (9)

	.  reduce 9


state 35
	struct_entry : SYN_VER EQ VALUE .  (10)

	.  reduce 10


state 36
	struct_entry : SYN_VHDL_MAP EQ LBRAK . list2 RBRAK  (11)
	struct_entry : SYN_VHDL_MAP EQ LBRAK . RBRAK  (12)

	STRING  shift 41
	RBRAK  shift 42
	.  error

	list2  goto 43
	str  goto 44


state 37
	struct_entry : SYN_SYNTH_SET EQ LBRAK . list21 RBRAK  (15)
	struct_entry : SYN_SYNTH_SET EQ LBRAK . RBRAK  (16)

	STRING  shift 41
	RBRAK  shift 45
	.  error

	list21  goto 46
	str  goto 47


state 38
	struct_entry : SYN_TECH_SET EQ LBRAK . list21 RBRAK  (17)
	struct_entry : SYN_TECH_SET EQ LBRAK . RBRAK  (18)

	STRING  shift 41
	RBRAK  shift 48
	.  error

	list21  goto 49
	str  goto 47


state 39
	struct_entry : SYN_VHDL_LIB EQ LBRAK . list1 RBRAK  (13)
	struct_entry : SYN_VHDL_LIB EQ LBRAK . RBRAK  (14)

	STRING  shift 41
	RBRAK  shift 50
	.  error

	list1  goto 51
	str  goto 52


state 40
	struct_entries : struct_entry EOI struct_entries .  (7)

	.  reduce 7


state 41
	str : STRING .  (25)
	str : STRING . ADD str  (26)

	ADD  shift 53
	EOI  reduce 25
	SEP  reduce 25


state 42
	struct_entry : SYN_VHDL_MAP EQ LBRAK RBRAK .  (12)

	.  reduce 12


state 43
	struct_entry : SYN_VHDL_MAP EQ LBRAK list2 . RBRAK  (11)

	RBRAK  shift 54
	.  error


state 44
	list2 : str . SEP str EOI  (21)
	list2 : str . SEP str EOI list2  (22)

	SEP  shift 55
	.  error


state 45
	struct_entry : SYN_SYNTH_SET EQ LBRAK RBRAK .  (16)

	.  reduce 16


state 46
	struct_entry : SYN_SYNTH_SET EQ LBRAK list21 . RBRAK  (15)

	RBRAK  shift 56
	.  error


state 47
	list21 : str . SEP LBRAK list2 RBRAK EOI  (19)
	list21 : str . SEP LBRAK list2 RBRAK EOI list21  (20)

	SEP  shift 57
	.  error


state 48
	struct_entry : SYN_TECH_SET EQ LBRAK RBRAK .  (18)

	.  reduce 18


state 49
	struct_entry : SYN_TECH_SET EQ LBRAK list21 . RBRAK  (17)

	RBRAK  shift 58
	.  error


state 50
	struct_entry : SYN_VHDL_LIB EQ LBRAK RBRAK .  (14)

	.  reduce 14


state 51
	struct_entry : SYN_VHDL_LIB EQ LBRAK list1 . RBRAK  (13)

	RBRAK  shift 59
	.  error


state 52
	list1 : str . EOI  (23)
	list1 : str . EOI list1  (24)

	EOI  shift 60
	.  error


state 53
	str : STRING ADD . str  (26)

	STRING  shift 41
	.  error

	str  goto 61


state 54
	struct_entry : SYN_VHDL_MAP EQ LBRAK list2 RBRAK .  (11)

	.  reduce 11


state 55
	list2 : str SEP . str EOI  (21)
	list2 : str SEP . str EOI list2  (22)

	STRING  shift 41
	.  error

	str  goto 62


state 56
	struct_entry : SYN_SYNTH_SET EQ LBRAK list21 RBRAK .  (15)

	.  reduce 15


state 57
	list21 : str SEP . LBRAK list2 RBRAK EOI  (19)
	list21 : str SEP . LBRAK list2 RBRAK EOI list21  (20)

	LBRAK  shift 63
	.  error


state 58
	struct_entry : SYN_TECH_SET EQ LBRAK list21 RBRAK .  (17)

	.  reduce 17


state 59
	struct_entry : SYN_VHDL_LIB EQ LBRAK list1 RBRAK .  (13)

	.  reduce 13


state 60
	list1 : str EOI .  (23)
	list1 : str EOI . list1  (24)

	STRING  shift 41
	RBRAK  reduce 23

	list1  goto 64
	str  goto 52


state 61
	str : STRING ADD str .  (26)

	.  reduce 26


state 62
	list2 : str SEP str . EOI  (21)
	list2 : str SEP str . EOI list2  (22)

	EOI  shift 65
	.  error


state 63
	list21 : str SEP LBRAK . list2 RBRAK EOI  (19)
	list21 : str SEP LBRAK . list2 RBRAK EOI list21  (20)

	STRING  shift 41
	.  error

	list2  goto 66
	str  goto 44


state 64
	list1 : str EOI list1 .  (24)

	.  reduce 24


state 65
	list2 : str SEP str EOI .  (21)
	list2 : str SEP str EOI . list2  (22)

	STRING  shift 41
	RBRAK  reduce 21

	list2  goto 67
	str  goto 44


state 66
	list21 : str SEP LBRAK list2 . RBRAK EOI  (19)
	list21 : str SEP LBRAK list2 . RBRAK EOI list21  (20)

	RBRAK  shift 68
	.  error


state 67
	list2 : str SEP str EOI list2 .  (22)

	.  reduce 22


state 68
	list21 : str SEP LBRAK list2 RBRAK . EOI  (19)
	list21 : str SEP LBRAK list2 RBRAK . EOI list21  (20)

	EOI  shift 69
	.  error


state 69
	list21 : str SEP LBRAK list2 RBRAK EOI .  (19)
	list21 : str SEP LBRAK list2 RBRAK EOI . list21  (20)

	STRING  shift 41
	RBRAK  reduce 19

	list21  goto 70
	str  goto 47


state 70
	list21 : str SEP LBRAK list2 RBRAK EOI list21 .  (20)

	.  reduce 20


23 terminals, 11 nonterminals
28 grammar rules, 71 states
